--- a/index.html
+++ b/index.html
@@ -197,20 +197,20 @@
                 <img src="./images/product4.jpg" alt="image">
             </div>
         </div>
-        <div class="heading">
-            <a href="#" class="btn">View More</a>
-        </div>
     </section>
         
     <section class="testimonial" id="testimonial">
         <div class="heading">
             <h2>Location</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                590 CMTT District 3 HCM city
             </p>
         </div>
+        <div id="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.325247592183!2d106.66410831466845!3d10.786382261959636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752ed23c80767d%3A0x5a981a5efee9fd7d!2zNTkwIEPDoWNoIE3huqFuZyBUaMOhbmcgVMOhbSwgUGjGsOG7nW5nIDExLCBRdeG6rW4gMywgVGjDoG5oIHBo4buRIEjhu5MgQ2jDrSBNaW5oLCBWaeG7h3QgTmFt!5e0!3m2!1svi!2s!4v1597691238935!5m2!1svi!2s" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
         <div class="content">
-            <div class="testimonialBx">
+            <!-- <div class="testimonialBx">
                 <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Ullam perferendis consequuntur illum ex sed facere officiis 
@@ -235,7 +235,7 @@
                     <br>
                     <span>Creative Designer</span>
                 </h3>
-            </div>
+            </div> -->
         </div>
     </section>
     <section class="contact" id="contact">
@@ -283,9 +283,9 @@
             <div class="formBx">
                 <form action="" onsubmit="sendFeedBack()">
                     <h3>Message Me</h3>
-                    <input type="text" placeholder="Full name">
-                    <input type="email" placeholder="Email" >
-                    <textarea name="" id="" placeholder="Your Massage"></textarea>
+                    <input type="text" placeholder="Full name" required>
+                    <input type="email" placeholder="Email" required>
+                    <textarea name="" id="" placeholder="Your Massage" required></textarea>
                     <button type="submit">Send</button>
                 </form>
             </div>
