Add about us section and fix link navbar

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="toggle" onclick="toggleMenu()">
         </div>
         <ul class="menu">
-            <li><a href="#about" onclick="toggleMenu()">Gallery</a></li>
-            <li><a href="#services" onclick="toggleMenu()">Food</a></li>
-            <li><a href="#work" onclick="toggleMenu()">Location</a></li>
-            <li><a href="#testimonial" onclick="toggleMenu()">About Us</a></li>
+            <li><a href="#services" onclick="toggleMenu()">Services</a></li>
+            <li><a href="#gallery" onclick="toggleMenu()">Gallery</a></li>
+            <li><a href="#location" onclick="toggleMenu()">Location</a></li>
+            <li><a href="#aboutus" onclick="toggleMenu()">About Us</a></li>
             <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </ul>
     </header>
@@ -140,7 +140,7 @@
         </div>
     </section>
 
-    <section class="work" id="work">
+    <section class="work" id="gallery">
         <div class="heading">
             <h2>Gallery</h2>
             <p>
@@ -199,7 +199,7 @@
         </div>
     </section>
         
-    <section class="testimonial" id="testimonial">
+    <section class="testimonial" id="location">
         <div class="heading">
             <h2>Location</h2>
             <p>
@@ -236,6 +236,32 @@
                     <span>Creative Designer</span>
                 </h3>
             </div> -->
+        </div>
+    </section>
+    <section class="aboutus" id="aboutus">
+        <div class="heading">
+            <h2>About us</h2>
+            <p>T1.2005.E3 Students</p>
+        </div>
+        <div class="contentBx">
+            <div class="container">
+                <div class="image">
+                    <img src="./images/avatar.khoa.jpg" alt="avata2">
+                </div>
+                <div class="content">
+                    <div class="info">
+                        <h2>Khoa</h2>
+                        <span>MERN Stack Developer</span>
+                    </div>
+                </div>
+                <ul>
+                    <li><a href="#"><span><i class="fab fa-facebook-f"></i></span></a></li>
+                    <li><a href="#"><span><i class="fab fa-twitter"></i></span></a></li>
+                    <li><a href="#"><span><i class="fab fa-instagram"></i></span></a></li>
+                    <li><a href="#"><span><i class="fab fa-github"></i></span></a></li>
+                    <li><a href="#"><span><i class="fab fa-youtube"></i></span></a></li>
+                </ul>
+            </div>
         </div>
     </section>
     <section class="contact" id="contact">
