--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </a>
         </div>
         <video src="./videos/Pexels Videos 4513.mp4" muted loop autoplay></video>
+        <div class="overplay"></div>
     </section>
     <section class="about" id="about">
         <div class="heading">
@@ -414,7 +415,7 @@
             </div>
             <div class="formBx">
                 <form action="" onsubmit="sendFeedBack()">
-                    <h3>Message Me</h3>
+                    <h3>Feedback</h3>
                     <input type="text" placeholder="Full name" required>
                     <input type="email" placeholder="Email" required>
                     <textarea name="" id="" placeholder="Your Massage" required></textarea>
