--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <div class="heading">
             <h2>Location</h2>
             <p>
-                590 CMTT District 3 HCM city
+                590 Cach Mang Thang 8 - District 3 - Ho Chi Minh City
             </p>
         </div>
         <div id="map">
