Change Avata image

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <div class="heading white">
             <h2>Join With Us</h2>
         </div>
-        <div class="content">
+        <div class="content"> 
             <div class="arrow bounce"></div>
             <div class="booking">
                 <button onclick="showBooking()" class="btn">Booking</button>
@@ -317,12 +317,12 @@
         <div class="contentBx">
             <div class="container">
                 <div class="image">
-                    <img src="./images/avatar.khoa.jpg" alt="avata2">
+                    <img src="./images/avatar.my.jpg" alt="avata2">
                 </div>
                 <div class="content">
                     <div class="info">
-                        <h2>Khoa</h2>
-                        <span>MERN Stack Developer</span>
+                        <h2>Truc My</h2>
+                        <span>Leader</span>
                     </div>
                 </div>
                 <ul>
@@ -335,12 +335,14 @@
             </div>
             <div class="container">
                 <div class="image">
-                    <img src="./images/avatar.khoa.jpg" alt="avata2">
+                    <img src="./images/avatar.khoa2.jpg" alt="avata2">
                 </div>
                 <div class="content">
                     <div class="info">
-                        <h2>Khoa</h2>
-                        <span>MERN Stack Developer</span>
+                        <h2>Anh Khoa</h2>
+                        <span>Member<br>
+                        MERN Stack Developer
+                        </span>
                     </div>
                 </div>
                 <ul>
@@ -353,12 +355,12 @@
             </div>
             <div class="container">
                 <div class="image">
-                    <img src="./images/avatar.khoa.jpg" alt="avata2">
+                    <img src="./images/avatar.ngoan.jpg" alt="avata2">
                 </div>
                 <div class="content">
                     <div class="info">
-                        <h2>Khoa</h2>
-                        <span>MERN Stack Developer</span>
+                        <h2>Ngoan Bui</h2>
+                        <span>Member</span>
                     </div>
                 </div>
                 <ul>
