add more services and booking

--- a/index.html
+++ b/index.html
@@ -88,23 +88,23 @@
                 </p>
         </div>
         <div class="content">
-            <div class="servicesBx">
+            <div class="servicesBx" onclick="location.href='#ride'">
                 <i class="fas fa-swimmer"></i>
-                <h2>Swimming Zone</h2>
+                <h2>Ride and slide</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, 
                     adipisicing elit. Quidem pariatur placeat amet 
                 </p>
             </div>
-            <div class="servicesBx">
+            <div class="servicesBx" onclick="location.href='#adventure'">
                 <i class="fas fa-gamepad"></i>
-                <h2>Aventure Game Zone</h2>
+                <h2>Adventure Game Zone</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, 
                     adipisicing elit. Quidem pariatur placeat amet 
                 </p>
             </div>
-            <div class="servicesBx">
+            <div class="servicesBx" onclick="location.href='#food'">
                 <i class="fas fa-utensils"></i>
                 <h2>Food Zone</h2>
                 <p>
@@ -112,7 +112,7 @@
                     adipisicing elit. Quidem pariatur placeat amet 
                 </p>
             </div>
-            <div class="servicesBx">
+            <div class="servicesBx" onclick="location.href='#rest'">
                 <i class="fas fa-hotel"></i>
                 <h2>Rest Zone</h2>
                 <p>
@@ -120,7 +120,7 @@
                     adipisicing elit. Quidem pariatur placeat amet 
                 </p>
             </div>
-            <div class="servicesBx">
+            <div class="servicesBx" onclick="location.href='#aquarium'">
                 <i class="fas fa-fish"></i>
                 <h2>Aquarium</h2>
                 <p>
@@ -128,15 +128,142 @@
                     adipisicing elit. Quidem pariatur placeat amet 
                 </p>
             </div>
-            <div class="servicesBx">
+            <div class="servicesBx" onclick="location.href='#kid'">
                 <i class="fas fa-baby-carriage"></i>
-                <h2>Baby Play Zone</h2>
+                <h2>Kid Zone</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, 
                     adipisicing elit. Quidem pariatur placeat amet 
                 </p>
             </div>
-            
+        </div>
+        <div class="contentBxs">
+            <div class="heading white" id="ride">
+                <h2>Ride And Slide</h2>
+            </div>
+            <div class="contentBx">
+                <div class="bxContent w50">
+                    <span>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facilis dolore similique debitis ab, perferendis eum sunt dolor 
+                        reiciendis cumque eveniet itaque nobis, officia mollitia, culpa ea 
+                        cupiditate vitae obcaecati ipsa.
+                        <br>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facilis dolore similique debitis ab, perferendis eum sunt dolor 
+                        reiciendis cumque eveniet itaque nobis, officia mollitia, culpa ea 
+                        cupiditate vitae obcaecati ipsa.
+                    </span>
+                </div>
+                <div class="bxVideo w50">
+                    <video src="./videos/FlowRider.mp4" controls></video>
+                </div>
+            </div>
+            <div class="heading white" id="adventure">
+                <h2>Adventure Game Zone</h2>
+            </div>
+            <div class="contentBx rever">
+                <div class="bxVideo w50">
+                    <video src="./videos/Abyss.mp4" controls></video>
+                </div>
+                <div class="bxContent w50">
+                    <span>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facilis dolore similique debitis ab, perferendis eum sunt dolor 
+                        reiciendis cumque eveniet itaque nobis, officia mollitia, culpa ea 
+                        cupiditate vitae obcaecati ipsa.
+                        <br>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facilis dolore similique debitis ab, perferendis eum sunt dolor 
+                        reiciendis cumque eveniet itaque nobis, officia mollitia, culpa ea 
+                        cupiditate vitae obcaecati ipsa.
+                    </span>
+                </div>
+            </div>
+            <div class="heading white" id="food">
+                <h2>Food Zone</h2>
+            </div>
+            <div class="contentBx">
+                <div class="bxContent w50">
+                    <span>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facilis dolore similique debitis ab, perferendis eum sunt dolor 
+                        reiciendis cumque eveniet itaque nobis, officia mollitia, culpa ea 
+                        cupiditate vitae obcaecati ipsa.
+                        <br>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facilis dolore similique debitis ab, perferendis eum sunt dolor 
+                        reiciendis cumque eveniet itaque nobis, officia mollitia, culpa ea 
+                        cupiditate vitae obcaecati ipsa.
+                    </span>
+                </div>
+                <div class="bxVideo w50">
+                    <img src="./images/Sharky's Kitchen.jpg" alt="food">
+                </div>
+            </div>
+            <div class="heading white" id="rest">
+                <h2>Rest Zone</h2>
+            </div>
+            <div class="contentBx rever">
+                <div class="bxVideo w50">
+                    <img src="./images/Queen.jpg" alt="rest">
+                </div>
+                <div class="bxContent w50">
+                    <span>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facilis dolore similique debitis ab, perferendis eum sunt dolor 
+                        reiciendis cumque eveniet itaque nobis, officia mollitia, culpa ea 
+                        cupiditate vitae obcaecati ipsa.
+                        <br>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facilis dolore similique debitis ab, perferendis eum sunt dolor 
+                        reiciendis cumque eveniet itaque nobis, officia mollitia, culpa ea 
+                        cupiditate vitae obcaecati ipsa.
+                    </span>
+                </div>
+            </div>
+            <div class="heading white" id="aquarium">
+                <h2>Aquarium</h2>
+            </div>
+            <div class="contentBx">
+                <div class="bxContent w50">
+                    <span>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facilis dolore similique debitis ab, perferendis eum sunt dolor 
+                        reiciendis cumque eveniet itaque nobis, officia mollitia, culpa ea 
+                        cupiditate vitae obcaecati ipsa.
+                        <br>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facilis dolore similique debitis ab, perferendis eum sunt dolor 
+                        reiciendis cumque eveniet itaque nobis, officia mollitia, culpa ea 
+                        cupiditate vitae obcaecati ipsa.
+                    </span>
+                </div>
+                <div class="bxVideo w50">
+                    <img src="./images/aquarium-coral-fish.jpg" alt="aquarium">
+                </div>
+            </div>
+            <div class="heading white" id="kid">
+                <h2>Kid Zone</h2>
+            </div>
+            <div class="contentBx">
+                <div class="bxVideo w50 rever">
+                    <img src="./images/aquaspray_2.jpg" alt="kid">
+                </div>
+                <div class="bxContent w50">
+                    <span>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facilis dolore similique debitis ab, perferendis eum sunt dolor 
+                        reiciendis cumque eveniet itaque nobis, officia mollitia, culpa ea 
+                        cupiditate vitae obcaecati ipsa.
+                        <br>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facilis dolore similique debitis ab, perferendis eum sunt dolor 
+                        reiciendis cumque eveniet itaque nobis, officia mollitia, culpa ea 
+                        cupiditate vitae obcaecati ipsa.
+                    </span>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -205,18 +332,6 @@
             <div class="guild">
                 <img src="./images/guildmap.jpg" alt="guildmap">
             </div>
-            <!-- <div class="workBx">
-                <img src="./images/product1.jpg" alt="image">
-            </div>
-            <div class="workBx">
-                <img src="./images/product2.jpg" alt="image">
-            </div>
-            <div class="workBx">
-                <img src="./images/product3.jpg" alt="image">
-            </div>
-            <div class="workBx">
-                <img src="./images/product4.jpg" alt="image">
-            </div> -->
         </div>
     </section>
     <section class="join">
@@ -243,7 +358,14 @@
                             <input type="number" min="0" value="0">
                         </div>
                         <div class="pricebooking">
-
+                            <h3>From monday to friday</h3>
+                            <br>
+                            <span>Adult: 5$ &nbsp; &nbsp; &nbsp; &nbsp; Children: 3$</span>
+                            <br>
+                            <br>
+                            <h3>Saturday & Sunday</h3>
+                            <br>
+                            <span>Adult: 7$ &nbsp; &nbsp; &nbsp; &nbsp; Children: 5$</span>
                         </div>
                     </div>
                     <div class="w50 br5 ">
@@ -281,32 +403,6 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.325247592183!2d106.66410831466845!3d10.786382261959636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752ed23c80767d%3A0x5a981a5efee9fd7d!2zNTkwIEPDoWNoIE3huqFuZyBUaMOhbmcgVMOhbSwgUGjGsOG7nW5nIDExLCBRdeG6rW4gMywgVGjDoG5oIHBo4buRIEjhu5MgQ2jDrSBNaW5oLCBWaeG7h3QgTmFt!5e0!3m2!1svi!2s!4v1597691238935!5m2!1svi!2s" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
         <div class="content">
-            <!-- <div class="testimonialBx">
-                <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Ullam perferendis consequuntur illum ex sed facere officiis 
-                adipisci quod perspiciatis molestiae ad veniam doloremque beatae, 
-                porro ratione eligendi architecto tenetur aliquid.
-                </p>
-                <h3>
-                    Someone Famous
-                    <br>
-                    <span>Creative Designer</span>
-                </h3>
-            </div>
-            <div class="testimonialBx">
-                <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Ullam perferendis consequuntur illum ex sed facere officiis 
-                adipisci quod perspiciatis molestiae ad veniam doloremque beatae, 
-                porro ratione eligendi architecto tenetur aliquid.
-                </p>
-                <h3>
-                    Someone Famous
-                    <br>
-                    <span>Creative Designer</span>
-                </h3>
-            </div> -->
         </div>
     </section>
     <section class="aboutus" id="aboutus">
