add review.pdf, uerguide.pdf and change home, services page

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                     closed for the party from 3pm – 9pm, you can enjoy all 
                     the fun rides the park has to offer during the party!!
                 </p>
+                <br>
+                <br>
+                <p>Download file information <a href="./files/RULESANDUSEFULTIPS.pdf" download>Here</a></p>
             </div>
             <div class="w50">
                 <img src="./images/festival.png" class="img" alt="image">
@@ -98,7 +101,7 @@
                 </p>
             </div>
             <div class="servicesBx" onclick="location.href='#adventure'">
-                <i class="fas fa-gamepad"></i>
+                <i class="fas fa-tools"></i>
                 <h2>Facility</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, 
@@ -340,7 +343,7 @@
 
                 </div>
                 <div class="bxVideo w50">
-                    <img src="./images/aquarium-coral-fish.jpg" alt="aquarium">
+                    <video controls src="./videos/y2mate.com - THE MOST AMAZING AQUARIUM - Georgia Aquarium_gkA9SeGRkb8_1080p (online-video-cutter.com) (1).mp4"></video>
                 </div>
             </div>
             <div class="heading white" id="kid">
